--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <small>McGill students can receive 10% off upon presentation of their student ID.</small></p>
 </div>
   <div id="navigation">
-    <a href="studentdeals.html"><img src="img/id.png" width="50"></a>
+    <a href="index.html"><img src="img/id.png" width="50"></a>
     <a href="appdeals.html"><img src="img/coupons.png" width="50"></a>
     <a href="map.html"><img src="img/globe.png" width="50"></a>
   </div>
