--- a/appdeals.html
+++ b/appdeals.html
@@ -22,7 +22,7 @@
   <small>deal.</small></p>
 </div>
   <div id="navigation">
-    <a href="studentdeals.html"><img src="img/id.png" width="50"></a>
+    <a href="index.html"><img src="img/id.png" width="50"></a>
     <a href="appdeals.html"><img src="img/coupons.png" width="50"></a>
     <a href="map.html"><img src="img/globe.png" width="50"></a>
   </div>
